[gd_scene load_steps=2 format=3 uid="uid://bk53vgxrj0sj7"]

[ext_resource type="Script" path="res://cutscene/scripts/cutscene_trigger.gd" id="1_bati3"]

[node name="CutsceneTrigger" type="Node2D"]
script = ExtResource("1_bati3")
