[gd_scene load_steps=62 format=3 uid="uid://ddw7faihvywvr"]

[ext_resource type="Script" path="res://levels/scripts/level_manager.gd" id="1_m73c2"]
[ext_resource type="PackedScene" uid="uid://cgpf1lec1exwb" path="res://environment/terrain/scenes/terrain.tscn" id="2_xyj3p"]
[ext_resource type="PackedScene" uid="uid://c6dq45vbl78hj" path="res://interaction/content_container/content_container_area.tscn" id="3_w1yo7"]
[ext_resource type="PackedScene" uid="uid://bigu2os3aq8k1" path="res://action_scripts/scenes/script_trigger.tscn" id="4_n7o1y"]
[ext_resource type="Script" path="res://action_scripts/scripts/jujubinha_surprised.gd" id="5_bvq5p"]
[ext_resource type="Script" path="res://action_scripts/scripts/jujubinha_start_follow1.gd" id="6_ecopa"]
[ext_resource type="Script" path="res://resources/classes/objects/dialog/dialog_box.gd" id="7_yrwnf"]
[ext_resource type="Script" path="res://cutscene/scripts/cutscene_trigger.gd" id="8_lxupt"]
[ext_resource type="PackedScene" uid="uid://bgljvnge160or" path="res://characters/scenes/main_character.tscn" id="8_vth8r"]
[ext_resource type="Script" path="res://resources/classes/objects/dialog/dialog.gd" id="8_yp1w8"]
[ext_resource type="PackedScene" uid="uid://cr8x3nvrj27ky" path="res://characters/scenes/cat_follow_character.tscn" id="9_hhy6s"]
[ext_resource type="Script" path="res://cutscene/levels/level_1/house_3/jujubinha_arrives_at_home.gd" id="9_th80l"]
[ext_resource type="Texture2D" uid="uid://b2lxmvlcgu7vm" path="res://characters/assets/calico_0.png" id="12_o2h4c"]
[ext_resource type="PackedScene" uid="uid://rggrvhlodlv7" path="res://environment/terrain/scenes/objects_terrain.tscn" id="13_6rcye"]
[ext_resource type="PackedScene" uid="uid://dxagbjrrw7m88" path="res://transition/door.tscn" id="14_hrynm"]
[ext_resource type="Script" path="res://gui/canvas_layer.gd" id="15_mgnkw"]
[ext_resource type="Texture2D" uid="uid://cabnn175nnut8" path="res://gui/icons/book.png" id="16_wbddo"]
[ext_resource type="Texture2D" uid="uid://dof5vqg1x6m5i" path="res://gui/icons/book_hover.png" id="17_ot7rs"]
[ext_resource type="Texture2D" uid="uid://dlhrcw2eqt5ni" path="res://gui/icons/tab_button.png" id="18_kj323"]
[ext_resource type="PackedScene" uid="uid://b3rjyjxfyd2bv" path="res://interaction/popup/note/note_popup.tscn" id="19_phnov"]
[ext_resource type="PackedScene" uid="uid://lou1cctl4ij" path="res://gui/notification/scenes/notification_box.tscn" id="20_7c0ww"]
[ext_resource type="PackedScene" uid="uid://n7p07evg8r3o" path="res://gui/container/content_container.tscn" id="21_7fu7v"]
[ext_resource type="PackedScene" uid="uid://d2m6dxtevb3up" path="res://gui/inventory/scenes/inventory.tscn" id="22_732kx"]
[ext_resource type="Texture2D" uid="uid://cvkst26nhbu1o" path="res://environment/shaders/light.png" id="23_houxl"]
[ext_resource type="PackedScene" uid="uid://cpjsffmqikpi2" path="res://gui/container/wait_feedback_container.tscn" id="24_sxmte"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ksr4"]
size = Vector2(14.3017, 10.0169)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8oje4"]
size = Vector2(152, 114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lm0a3"]
size = Vector2(47, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rytvj"]
size = Vector2(147, 65)

[sub_resource type="Resource" id="Resource_x040f"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["M-meow! "])

[sub_resource type="Resource" id="Resource_gbjyg"]
script = ExtResource("8_yp1w8")
id = "idle"
has_prerequisite = false
prerequisite_quest_id = ""
release_a_quest = false
quest_id = ""
dialog = Array[ExtResource("7_yrwnf")]([SubResource("Resource_x040f")])

[sub_resource type="Resource" id="Resource_874pn"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Ei, você! O que está fazendo na minha casa?"])

[sub_resource type="Resource" id="Resource_78sib"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["Não se assuste, Jujubinha! Sou a Misty, sua vizinha! O Sr.Batata me disse para vir até você!"])

[sub_resource type="Resource" id="Resource_pbkji"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Ah, Misty.. É você. Eu não estava esperando ninguém, sua entrada me assustou."])

[sub_resource type="Resource" id="Resource_0t2al"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["Me desculpe, não era minha intenção! Eu só preciso muito da sua ajuda!"])

[sub_resource type="Resource" id="Resource_pdvjx"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["O que você precisa?"])

[sub_resource type="Resource" id="Resource_5mrd8"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["Meus pais sumiram, e eu preciso encontrá-los! O Sr.Batata disse que você saberia me ajudar!"])

[sub_resource type="Resource" id="Resource_in3ah"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Entendi... Mas para te ajudar, preciso que você me ajude antes."])

[sub_resource type="Resource" id="Resource_bwg64"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["Claro! Como posso ajudar?"])

[sub_resource type="Resource" id="Resource_ivi18"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Eu sempre quis ir ao lago do nosso bairro, mas o Sr.Batata não pode ir muito longe devido sua idade e eu... bom, tenho medo de ir sozinho."])

[sub_resource type="Resource" id="Resource_5bu34"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["Você quer minha companhia? Sem problemas, é claro que podemos ir juntos!"])

[sub_resource type="Resource" id="Resource_rmjpq"]
script = ExtResource("8_yp1w8")
id = "jujubinha_greetings"
has_prerequisite = true
prerequisite_quest_id = "srpotatoe_item_quest"
release_a_quest = true
quest_id = "jujubinha_location_1_quest"
dialog = Array[ExtResource("7_yrwnf")]([SubResource("Resource_874pn"), SubResource("Resource_78sib"), SubResource("Resource_pbkji"), SubResource("Resource_0t2al"), SubResource("Resource_pdvjx"), SubResource("Resource_5mrd8"), SubResource("Resource_in3ah"), SubResource("Resource_bwg64"), SubResource("Resource_ivi18"), SubResource("Resource_5bu34")])

[sub_resource type="Resource" id="Resource_txar6"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["Então, o que acha?"])

[sub_resource type="Resource" id="Resource_ewed6"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["É tão tranquilo. Agora eu entendo por que minha família gostava tanto de vir passear aqui."])

[sub_resource type="Resource" id="Resource_f5lsc"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["Gostava? Eles também sumiram?"])

[sub_resource type="Resource" id="Resource_4j7lm"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Já faz alguns anos desde a última vez que os vi..."])

[sub_resource type="Resource" id="Resource_kvrlo"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Lembro que estávamos passeando juntos pelo bairro, e de repente quando surgiu uma moto em nossa direção eu simplesmente dormi... E depois disso, nunca mais encontrei com minha família."])

[sub_resource type="Resource" id="Resource_h25vw"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["Mas você nunca foi procurá-los?"])

[sub_resource type="Resource" id="Resource_8pqf4"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Depois que isso aconteceu eu nunca mais tive coragem de sair de casa sozinho. Então eu espero minha familia em casa."])

[sub_resource type="Resource" id="Resource_550fh"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["Você acha que eles irão voltar?"])

[sub_resource type="Resource" id="Resource_74ovp"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Tenho certeza. Minha dona sempre dizia que não importasse o que aconteceria, ela sempre iria estar comigo."])

[sub_resource type="Resource" id="Resource_gwlxk"]
script = ExtResource("7_yrwnf")
character_type = 0
lines = Array[String](["..."])

[sub_resource type="Resource" id="Resource_jj1ae"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Muito obrigado por vir até aqui comigo, Misty! Nós podemos voltar agora."])

[sub_resource type="Resource" id="Resource_jo8n8"]
script = ExtResource("8_yp1w8")
id = "jujubinha_arrives_at_lake"
has_prerequisite = true
prerequisite_quest_id = "jujubinha_location_1_quest"
release_a_quest = true
quest_id = "jujubinha_location_2_quest"
dialog = Array[ExtResource("7_yrwnf")]([SubResource("Resource_txar6"), SubResource("Resource_ewed6"), SubResource("Resource_f5lsc"), SubResource("Resource_4j7lm"), SubResource("Resource_kvrlo"), SubResource("Resource_h25vw"), SubResource("Resource_8pqf4"), SubResource("Resource_550fh"), SubResource("Resource_74ovp"), SubResource("Resource_gwlxk"), SubResource("Resource_jj1ae")])

[sub_resource type="Resource" id="Resource_vmhp2"]
script = ExtResource("7_yrwnf")
character_type = 1
lines = Array[String](["Eu acho que você deveria ir atrás de algumas notas que há pelo nosso bairro, elas farão você entender melhor o que está acontecendo.", "Eu nunca pude encontrá-las, mas sei que elas estão por ai.", "Ah.. e caredito que seja importante você ir conversar com a Pedrita. Você provavelmente precisa da ajuda dela sobre a ponte."])

[sub_resource type="Resource" id="Resource_wja71"]
script = ExtResource("8_yp1w8")
id = "jujubinha_arrives_at_home"
has_prerequisite = true
prerequisite_quest_id = "jujubinha_location_2_quest"
release_a_quest = false
quest_id = ""
dialog = Array[ExtResource("7_yrwnf")]([SubResource("Resource_vmhp2")])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arrsv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35hr1"]
size = Vector2(24.5, 25)

[sub_resource type="Environment" id="Environment_drij1"]
background_mode = 3
tonemap_mode = 3
glow_enabled = true
glow_normalized = true
glow_intensity = 1.0
glow_bloom = 0.1
glow_blend_mode = 0

[sub_resource type="Gradient" id="Gradient_6kxq7"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d7yml"]
gradient = SubResource("Gradient_6kxq7")

[node name="House3" type="Node2D"]
script = ExtResource("1_m73c2")
level_id = "house_3_firstfloor"
display_level_name = "Casa de Jujubinha - 1º Piso"

[node name="Terrain" parent="." instance=ExtResource("2_xyj3p")]
layer_0/tile_data = PackedInt32Array(-196611, 196612, 4, -131075, 196612, 4, -196610, 196612, 4, -131074, 196612, 4, -196609, 196612, 4, -131073, 196612, 4, -262144, 196612, 4, -196608, 196612, 4, -262143, 720897, 6, -196607, 720897, 6, -262142, 655361, 7, -196606, 196612, 4, -262141, 720897, 6, -196605, 196612, 4, -262140, 655361, 6, -196604, 196612, 4, -262139, 655361, 6, -196603, 196612, 4, -262138, 720897, 6, -196602, 720897, 6, -65539, 720897, 6, -3, 720897, 6, -65538, 720897, 6, -2, 720897, 6, -65537, 655361, 6, -1, 720897, 6, -131072, 720897, 6, -65536, 720897, 6, -65535, 196612, 4, -131070, 196612, 4, -65534, 196612, 4, -131069, 196612, 4, -131068, 196612, 4, -65533, 655361, 6, -65532, 720897, 6, -131067, 196612, 4, -65531, 655361, 6, -131066, 655361, 6, -65530, 655361, 6, 65533, 655361, 6, 65534, 720897, 6, 131070, 655361, 6, 65535, 655361, 6, 131071, 655361, 6, 0, 720897, 6, 65536, 720897, 6, 1, 196612, 4, 65537, 196612, 4, 2, 196612, 4, 65538, 196612, 4, 3, 720897, 6, 65539, 720897, 6, 4, 655361, 6, 65540, 655361, 6, 5, 720897, 6, 65541, 720897, 6, 6, 655361, 6, 65542, 655361, 6, -327681, 720897, 5, -262145, 720897, 6, -393216, 196612, 3, -327680, 720897, 6, -393215, 196612, 3, -327679, 720897, 6, -393214, 196612, 3, -327678, 655361, 6, -393213, 196612, 3, -327677, 720897, 6, -393212, 196612, 3, -327676, 655361, 6, -327682, 655361, 5, -262146, 196612, 4, -327675, 720897, 6, -327683, 720897, 5, -262147, 720897, 6, -327674, 720897, 6, -393211, 196612, 3, -393210, 196612, 3, -393217, 196609, 4, -458752, 196609, 4, -458751, 131073, 4, -458750, 196609, 4, -458749, 196609, 4, -458748, 196609, 4, -458747, 131073, 4, -393218, 196609, 4, -458746, 196609, 4, -393219, 196609, 4, -524291, 131073, 2, -458755, 131073, 3, -524290, 196609, 2, -458754, 196609, 3, -524289, 131073, 2, -458753, 131073, 3, -589824, 196609, 2, -524288, 196609, 3, -589823, 131073, 2, -524287, 131073, 3, -589822, 131073, 2, -524286, 131073, 3, -589821, 196609, 2, -524285, 196609, 3, -589820, 131073, 2, -524284, 131073, 3, -589819, 131073, 2, -524283, 131073, 3, -589818, 131073, 2, -524282, 131073, 3, -720891, 196609, 1, -655355, 131073, 3, -720890, 131073, 1, -655354, 131073, 3, -720893, 131073, 1, -655357, 196609, 3, -720892, 131073, 1, -655356, 196609, 3, -720894, 131073, 1, -655358, 196609, 3, -720895, 131073, 1, -655359, 131073, 3, -655361, 131073, 1, -589825, 131073, 3, -720896, 196609, 1, -655360, 196609, 3, -655363, 196609, 1, -589827, 131073, 3, -655362, 131073, 1, -589826, 196609, 3, 131069, 655361, 6, -327685, 196612, 3, -327684, 196612, 3, -262149, 655361, 6, -262148, 720897, 6, -196613, 655361, 6, -196612, 196612, 4, -131077, 655361, 6, -131076, 196612, 4, -65541, 655361, 6, -65540, 720897, 6, -5, 655361, 6, -4, 720897, 6, 65531, 655361, 6, 65532, 720897, 6, 131067, 655361, 6, 131068, 720897, 6, -393209, 196612, 3, -393208, 262148, 3, -327673, 655361, 6, -327672, 786433, 6, -196601, 655361, 6, -196600, 786433, 6, -131065, 655361, 6, -131064, 786433, 6, -262137, 655361, 6, -262136, 786433, 6, -65529, 655361, 6, -65528, 786433, 6, 7, 655361, 6, 8, 786433, 6, 65543, 655361, 6, 65544, 786433, 7, -327687, 196612, 3, -327686, 196612, 3, -262150, 720897, 6, -196614, 720897, 6, -131078, 720897, 6, -65542, 720897, 6, -6, 720897, 6, 65530, 720897, 6, 131065, 655361, 6, 131066, 720897, 6, 196602, 655361, 7, 196603, 655361, 7, 196604, 720897, 7, 196605, 655361, 7, 196606, 720897, 7, 196607, 655361, 7, 131072, 655361, 7, 131073, 720897, 7, 131074, 655361, 7, 131075, 655361, 7, 131076, 720897, 7, 131077, 655361, 7, 131078, 720897, 7, 131079, 786433, 7, -393220, 131073, 4, -393222, 131073, 4, -458745, 196609, 4, -524293, 196609, 2, -458757, 196609, 3, -524292, 196609, 2, -458756, 196609, 3, -524294, 131073, 2, -655365, 196609, 1, -589829, 196609, 3, -655364, 131073, 1, -589828, 196609, 3, -655366, 131073, 1, -589830, 131073, 3, -655353, 196609, 3, -589817, 196609, 2, -524281, 196609, 3, -589816, 262145, 3, -524280, 262145, 3, -655352, 262145, 1, -458744, 262145, 4, -655367, 65537, 1, -589831, 131073, 3, -524295, 196609, 2, -458759, 131073, 3, -327688, 196612, 3, -262152, 589825, 6, -196616, 589825, 6, -131080, 589825, 6, -65544, 589825, 6, -8, 65540, 4, 65528, 65540, 4, 131064, 589825, 7, 196601, 589825, 7, -524296, 65537, 2, -458760, 65537, 3, -589832, 65537, 1, -393224, 65537, 4, -720889, 262145, 1, -393223, 131073, 4, -458758, 131073, 3, 65529, 131076, 4, -7, 131076, 4, -65543, 720897, 6, -131079, 720897, 6, -196615, 720897, 6, -262151, 720897, 6, -393221, 196609, 4, -655351, 1114113, 1, -589815, 1114113, 1, -524279, 1114113, 1, -458743, 1114113, 1, -393207, 1114113, 1, -327671, 1114113, 1, -262135, 1114113, 1, -196599, 1114113, 1, -131063, 1114113, 1, -65527, 1114113, 1, 65545, 1114113, 1, 9, 1114113, 1, -720887, 1114113, 0, -720888, 786433, 0, -786428, 589825, 0, -786427, 655361, 0, -786426, 720897, 0, -786425, 786433, 0, -786432, 589825, 0, -786431, 655361, 0, -786430, 720897, 0, -786429, 786433, 0, -720900, 786433, 0, -720899, 655361, 0, -720898, 720897, 0, -720897, 786433, 0, -720903, 589825, 0, -720902, 655361, 0, -720901, 720897, 0, -720904, 1114113, 268435456, -655369, 1, 0, -655368, 65537, 0, -589833, 1114113, 268435457, -524297, 1114113, 268435457, -458761, 1114113, 268435457, -393225, 1114113, 268435457, -327689, 1114113, 268435457, -262153, 1114113, 268435457, -196617, 1114113, 268435457, -131081, 1114113, 268435457, -65545, 1114113, 268435457, -9, 1114113, 268435457, 65527, 1114113, 268435457, 131063, 1114113, 268435457, 196600, 1048577, 268435464, 196599, 1114113, 268435464, 262137, 1048577, 268435464, 262136, 1114113, 268435464, 262138, 1048577, 8, 262139, 1048577, 8, 262140, 1048577, 8, 262141, 1048577, 8, 262142, 1, 1610612742, 262143, 1048577, 8, 196608, 1048577, 8, 196609, 1048577, 8, 196610, 1048577, 8, 196611, 1048577, 8, 196612, 1048577, 8, 196613, 1048577, 8, 196614, 1048577, 8, 196615, 1048577, 8, 131080, 1048577, 8, 131081, 1114113, 8, 196616, 1114113, 8, -131071, 720897, 6)
layer_1/tile_data = PackedInt32Array(-786424, 1114113, 0, -720888, 1114113, 1, -655368, 1114113, 268435457, -589833, 1114113, 268435457, -524297, 1114113, 268435457, -458761, 1114113, 268435457, -393225, 1114113, 268435457, -327689, 1114113, 268435457, -262153, 1114113, 268435457, -196617, 1114113, 268435457, -131081, 1114113, 268435457, -65545, 1114113, 268435457, -9, 1114113, 268435457, 65527, 1114113, 268435457, 131063, 1114113, 268435457, 196600, 1114113, 268435457, 196599, 1114113, 268435464, 131080, 1114113, 1)

[node name="InteractableObjects" type="Node2D" parent="."]
z_index = 1

[node name="ContentFood" parent="InteractableObjects" instance=ExtResource("3_w1yo7")]
position = Vector2(104, -112)
scale = Vector2(0.994319, 0.863374)
text = "Há quanto tempo essa comida está aqui?"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableObjects/ContentFood"]
position = Vector2(4.55976e-06, 37.0639)
shape = SubResource("RectangleShape2D_8ksr4")

[node name="ContentToy" parent="InteractableObjects" instance=ExtResource("3_w1yo7")]
position = Vector2(-115, 5.72205e-06)
scale = Vector2(0.994319, 0.863374)
text = "Essa bolinha de brinquedo parece bem gasta"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableObjects/ContentToy"]
position = Vector2(3.01713, -4.76837e-07)
shape = SubResource("RectangleShape2D_8ksr4")

[node name="ContentBoxes" parent="InteractableObjects" instance=ExtResource("3_w1yo7")]
position = Vector2(-115, 5.72205e-06)
scale = Vector2(0.994319, 0.863374)
text = "Será que o Jujubinha está de mudança?"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableObjects/ContentBoxes"]
position = Vector2(85.375, -105.776)
shape = SubResource("RectangleShape2D_8ksr4")

[node name="ActionScripts" type="Node2D" parent="."]

[node name="JujubinhaSurprised" parent="ActionScripts" instance=ExtResource("4_n7o1y")]
action_script = ExtResource("5_bvq5p")

[node name="Collision" type="CollisionShape2D" parent="ActionScripts/JujubinhaSurprised"]
visible = false
position = Vector2(68, -9)
shape = SubResource("RectangleShape2D_8oje4")
debug_color = Color(1, 0, 0, 0.419608)

[node name="JujubinhaFollow" parent="ActionScripts" instance=ExtResource("4_n7o1y")]
action_script = ExtResource("6_ecopa")
trigger_type = 2

[node name="Collision" type="CollisionShape2D" parent="ActionScripts/JujubinhaFollow"]
position = Vector2(73.5, 3.5)
shape = SubResource("RectangleShape2D_lm0a3")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Cutscenes" type="Node2D" parent="."]

[node name="JujubinhaArrivesAtHome" type="Node2D" parent="Cutscenes" node_paths=PackedStringArray("cutscene")]
position = Vector2(-56.6703, 14.6965)
script = ExtResource("8_lxupt")
cutscene = NodePath("Cutscene")

[node name="Cutscene" type="Node2D" parent="Cutscenes/JujubinhaArrivesAtHome" node_paths=PackedStringArray("destination_camera", "cutscene_trigger")]
script = ExtResource("9_th80l")
destination_camera = NodePath("Camera2D")
id = "jujubinha_arrives_at_home"
cutscene_trigger = NodePath("..")

[node name="Camera2D" type="Camera2D" parent="Cutscenes/JujubinhaArrivesAtHome/Cutscene"]
position = Vector2(-57.3297, -86.6965)
enabled = false
zoom = Vector2(1.5, 1.5)

[node name="Area2D" type="Area2D" parent="Cutscenes/JujubinhaArrivesAtHome"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cutscenes/JujubinhaArrivesAtHome/Area2D"]
position = Vector2(6.67033, 1.30351)
shape = SubResource("RectangleShape2D_rytvj")
debug_color = Color(1, 1, 0, 0.419608)

[node name="YSort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="MainCharacter" parent="YSort" instance=ExtResource("8_vth8r")]
position = Vector2(-24, 35)

[node name="Camera2D" type="Camera2D" parent="YSort/MainCharacter"]
zoom = Vector2(1.3, 1.3)
position_smoothing_enabled = true
editor_draw_limits = true

[node name="Jujubinha" parent="YSort" instance=ExtResource("9_hhy6s")]
position = Vector2(76, 3)
character_idle_dialog = SubResource("Resource_gbjyg")
character_dialogs = Array[ExtResource("8_yp1w8")]([SubResource("Resource_rmjpq"), SubResource("Resource_jo8n8"), SubResource("Resource_wja71")])
char_interact_quest_id = "searching_for_answers"
character_id = "jujubinha"
character_name = "Jujubinha"
texture = ExtResource("12_o2h4c")

[node name="ObjectsTerrain" parent="YSort" instance=ExtResource("13_6rcye")]
position = Vector2(3, -22)
scale = Vector2(0.96489, 0.865515)
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(-524291, 393228, 3, -589818, 393228, 3, -393214, 262158, 12, -458752, 131086, 12, -589820, 262158, 15, -327683, 458768, 2, -327682, 393232, 2, -65532, 327695, 10, 65538, 15, 12, -65534, 15, 0, -131074, 14, 2, -196611, 524302, 0, -196609, 524302, 0, -65539, 655374, 0, -65537, 655374, 0, -196610, 393232, 1, -458746, 196624, 7, -458745, 65552, 4, -393210, 393230, 12, 327678, 524302, 3, -393224, 12, 5, 131064, 65552, 2, -327686, 196623, 7, -262149, 458768, 268435458, -524293, 327696, 1, 65540, 655375, 2)
layer_1/name = "on_floor"
layer_1/y_sort_origin = 1
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-589824, 1572888, 20, -458750, 327696, 4, -131070, 15, 16, -458746, 196624, 7)

[node name="Doors" type="Node" parent="YSort"]

[node name="Door_INSIDE" parent="YSort/Doors" instance=ExtResource("14_hrynm")]
position = Vector2(-24, 56)
door_id = "house_3_door"
destination_level_tag = "level_1"
destination_door_tag = "HOUSE_3_OUT"
spawn_direction = "down"

[node name="Spawn" type="Marker2D" parent="YSort/Doors/Door_INSIDE"]
position = Vector2(0, -21)

[node name="Collision" type="CollisionShape2D" parent="YSort/Doors/Door_INSIDE"]
shape = SubResource("RectangleShape2D_arrsv")

[node name="Door_STAIRS_1" parent="YSort/Doors" instance=ExtResource("14_hrynm")]
position = Vector2(-114, -98)
destination_level_tag = "house_3_secondfloor"
destination_door_tag = "STAIRS_2"
spawn_direction = "up"

[node name="Spawn" type="Marker2D" parent="YSort/Doors/Door_STAIRS_1"]
position = Vector2(0, 23)

[node name="Collision" type="CollisionShape2D" parent="YSort/Doors/Door_STAIRS_1"]
shape = SubResource("RectangleShape2D_35hr1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("15_mgnkw")

[node name="InventoryButton" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_top = 140.0
offset_right = 40.0
offset_bottom = 180.0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/InventoryButton"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 28.0
offset_bottom = 28.0
texture_normal = ExtResource("16_wbddo")
texture_hover = ExtResource("17_ot7rs")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InventoryButton"]
layout_mode = 0
offset_left = 11.0
offset_top = 25.0
offset_right = 25.0
offset_bottom = 32.0
texture = ExtResource("18_kj323")
expand_mode = 1
stretch_mode = 5

[node name="NotePopup" parent="CanvasLayer" groups=["NotePopup"] instance=ExtResource("19_phnov")]
process_mode = 3
visible = false

[node name="NotificationBox" parent="CanvasLayer" instance=ExtResource("20_7c0ww")]
visible = false

[node name="ContentContainer" parent="CanvasLayer" instance=ExtResource("21_7fu7v")]
visible = false

[node name="Inventory" parent="CanvasLayer" instance=ExtResource("22_732kx")]
visible = false

[node name="WaitFeedbackContainer" parent="CanvasLayer" instance=ExtResource("24_sxmte")]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_drij1")

[node name="Light" type="Node2D" parent="."]

[node name="DarkBackground" type="DirectionalLight2D" parent="Light"]
color = Color(0.286275, 0.286275, 0.52549, 1)
blend_mode = 2

[node name="Lampshade" type="PointLight2D" parent="Light"]
position = Vector2(41, -31)
rotation = 1.5708
scale = Vector2(0.38898, 0.523086)
color = Color(1, 1, 0.54902, 1)
shadow_color = Color(0, 0, 0, 0.521569)
shadow_filter = 1
texture = ExtResource("23_houxl")

[node name="StairsLight" type="PointLight2D" parent="Light"]
position = Vector2(-114, -107)
rotation = 4.71239
scale = Vector2(0.870955, 0.421838)
energy = 1.5
texture = SubResource("GradientTexture2D_d7yml")

[connection signal="body_entered" from="Cutscenes/JujubinhaArrivesAtHome/Area2D" to="Cutscenes/JujubinhaArrivesAtHome" method="_on_trigger_area_entered"]
[connection signal="pressed" from="CanvasLayer/InventoryButton/TextureButton" to="CanvasLayer" method="_on_inventory_button_pressed"]
[connection signal="closed_note" from="CanvasLayer/NotePopup" to="." method="_on_note_manager_closed_note"]
[connection signal="opened_note" from="CanvasLayer/NotePopup" to="." method="_on_note_manager_opened_note"]

[editable path="YSort/Doors/Door_INSIDE"]
[editable path="YSort/Doors/Door_STAIRS_1"]
